--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
@@ -9,11 +9,18 @@
 
 .title {
     text-align: center;
+    color: #4f1818;
+}
+
+.title-1 {
+    color: #38c038;
 }
 
 .text-1 {
     font-size: 20px;
     background-color: darkgrey;
+    margin-top: 10px;
+
 }
 
 .text-2 {
