--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@
 .title {
     text-align: center;
     color: #4f1818;
+    margin: 25px 0 50px;
 }
 
 .title-1 {
@@ -44,6 +45,14 @@
 .title-1:hover {
     color: #ccc;
     text-decoration: underline;
+}
+
+.title-1::before {
+    content: '';
+    width: 50px;
+    height: 50px;
+    background-color: #38c038;
+    position: absolute;
 }
 
 .text-1 {
